Updates on coding exercises

--- a/coding_interviews/coding_exercises.ipynb
+++ b/coding_interviews/coding_exercises.ipynb
@@ -58,8 +58,8 @@
     "    cache_memory = {0:0, 1:1}\n",
     "    \n",
     "    def f(n):\n",
-    "        if n in memo:\n",
-    "            return memo[n]\n",
+    "        if n in cache_memory:\n",
+    "            return cache_memory[n]\n",
     "        cache_memory[n] = f(n-1) + f(n-2)\n",
     "        return cache_memory[n]\n",
     "    return f(n)\n",
@@ -2089,7 +2089,346 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## [HR] Minimum swaps 2\n",
+    "You are given an unordered array consisting of consecutive integers  [1, 2, 3, ..., n] without any duplicates. You are allowed to swap any two elements. Find the minimum number of swaps required to sort the array in ascending order.\n",
+    "\n",
+    "Example\n",
+    "\n",
+    "\n",
+    "Perform the following steps:\n",
+    "\n",
+    "i   arr                         swap (indices)\n",
+    "0   [7, 1, 3, 2, 4, 5, 6]   swap (0,3)\n",
+    "1   [2, 1, 3, 7, 4, 5, 6]   swap (0,1)\n",
+    "2   [1, 2, 3, 7, 4, 5, 6]   swap (3,4)\n",
+    "3   [1, 2, 3, 4, 7, 5, 6]   swap (4,5)\n",
+    "4   [1, 2, 3, 4, 5, 7, 6]   swap (5,6)\n",
+    "5   [1, 2, 3, 4, 5, 6, 7]\n",
+    "It took  swaps to sort the array.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: [4, 3, 1, 2]\n",
+      "Swapping: 0 -  3\n",
+      "Swapping: 0 -  1\n",
+      "Swapping: 0 -  2\n",
+      "Ordered: [1, 2, 3, 4]\n",
+      "Number of swaps: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_nums = [4, 3, 1, 2]\n",
+    "print(f\"Original: {a_nums}\")\n",
+    "swaps = 0\n",
+    "i = 0\n",
+    "while i < len(a_nums):\n",
+    "    # print(f\"index {i}\")\n",
+    "    if not a_nums[i]-1 == i:\n",
+    "        #swap(i, a[i]-1)\n",
+    "        index_b = a_nums[i]-1\n",
+    "        print(f\"Swapping: {i} -  {index_b}\")\n",
+    "        tmp = a_nums[i]\n",
+    "        a_nums[i] = a_nums[index_b]\n",
+    "        a_nums[index_b] = tmp\n",
+    "        swaps += 1\n",
+    "        # print(a_nums)\n",
+    "    else:\n",
+    "        i += 1\n",
+    "    \n",
+    "print(f\"Ordered: {a_nums}\")\n",
+    "print(f\"Number of swaps: {swaps}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "# Complete the minimumSwaps function below.\n",
+    "def minimumSwaps(arr):\n",
+    "    swaps = 0\n",
+    "    i = 0\n",
+    "    while i < len(arr):\n",
+    "        # print(f\"index {i}\")\n",
+    "        if not arr[i]-1 == i:\n",
+    "            index_b = arr[i]-1\n",
+    "            #print(f\"Swapping: {i} -  {index_b}\")\n",
+    "            tmp = arr[i]\n",
+    "            arr[i] = arr[index_b]\n",
+    "            arr[index_b] = tmp\n",
+    "            swaps += 1\n",
+    "        else:\n",
+    "            i += 1\n",
+    "    return swaps\n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    # fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "    n = int(input())\n",
+    "    arr = list(map(int, input().rstrip().split()))\n",
+    "    arr\n",
+    "    # res = minimumSwaps(arr)\n",
+    "    # fptr.write(str(res) + '\\n')\n",
+    "    # fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [HR] Repeated String\n",
+    "\n",
+    "There is a string, `s` , of lowercase English letters that is repeated infinitely many times. Given an integer, , find and print the number of letter a's in the first  letters of the infinite string.\n",
+    "\n",
+    "Example\n",
+    "s = 'abcac'\n",
+    "n = 10\n",
+    "\n",
+    "The substring we consider is `abcacabcac` , the first  characters of the infinite string. There are  occurrences of a in the substring.\n",
+    "\n",
+    "**Function Description**\n",
+    "\n",
+    "Complete the repeatedString function in the editor below.\n",
+    "repeatedString has the following parameter(s):\n",
+    "s: a string to repeat\n",
+    "n: the number of characters to consider\n",
+    "\n",
+    "**Returns**\n",
+    "int: the frequency of a in the substring\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "# s = \"abcac\"\n",
+    "# n = 10\n",
+    "# result = 4\n",
+    "\n",
+    "s = 'aba'\n",
+    "n = 10\n",
+    "result = 7\n",
+    "\n",
+    "len_s = len(s)\n",
+    "SEARCH_CHAR = \"a\"\n",
+    "\n",
+    "repetitions = int(n/len_s)\n",
+    "residual = \"\"\n",
+    "if not (n % len_s) == 0:\n",
+    "    residual = s[0: n % len_s]\n",
+    "\n",
+    "# a_in_s = s.find(\"a\") # Return only first occurrence\n",
+    "matches_base = len([match.start() for match in re.finditer(SEARCH_CHAR, s)]) # All occurrences\n",
+    "matches_residual = len([match.start() for match in re.finditer(SEARCH_CHAR, residual)]) # All occurrences\n",
+    "\n",
+    "total_occurrences_in_repetitions = (matches_base * repetitions) + matches_residual\n",
+    "total_occurrences_in_repetitions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [HR] Jumping on the Clouds\n",
+    "\n",
+    "There is a new mobile game that starts with consecutively numbered clouds. Some of the clouds are thunderheads and others are cumulus. The player can jump on any cumulus cloud having a number that is equal to the number of the current cloud plus  or . The player must avoid the thunderheads. Determine the minimum number of jumps it will take to jump from the starting postion to the last cloud. It is always possible to win the game.\n",
+    "\n",
+    "For each game, you will get an array of clouds numbered  if they are safe or  if they must be avoided.\n",
+    "\n",
+    "Example c = [0,1,0,0,0,1,0]\n",
+    "\n",
+    "Index the array from 0..6 The number on each cloud is its index in the list so the player must avoid the clouds at indices 1 and 5. They could follow these two paths: 0,2,4,6 or 0,2,3,4,6. The first path takes 3 jumps while the second takes 4. Return 3.\n",
+    "\n",
+    "Function Description\n",
+    "\n",
+    "Complete the jumpingOnClouds function in the editor below.\n",
+    "\n",
+    "jumpingOnClouds has the following parameter(s):\n",
+    "int c[n]: an array of binary integers\n",
+    "\n",
+    "Returns:\n",
+    "int: the minimum number of jumps required\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial i 0\n",
+      "  i 0, jumps 0\n",
+      "  i 2, jumps 1\n",
+      "  i 4, jumps 2\n",
+      "jumps 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# c = [0, 0, 1, 0, 0, 1, 0]; n = 7; return_valid = 4\n",
+    "c = [0,1,0,0,0,1,0]; n = 7; return_valid = 3\n",
+    "\n",
+    "## Note:\n",
+    "## c[0] == 0 & c[n-1]==0 always\n",
+    "## at index n-3 we can't stop checking\n",
+    "\n",
+    "jumps = 0\n",
+    "i = 0\n",
+    "print(f\"initial i {i}\")\n",
+    "while i < n-1:\n",
+    "    print(f\"  i {i}, jumps {jumps}\")\n",
+    "    if i>=n-3 or c[i+2]==0:\n",
+    "        jumps += 1\n",
+    "        i += 2\n",
+    "    else:\n",
+    "        jumps += 1\n",
+    "        i += 1\n",
+    "\n",
+    "# jumps += 1\n",
+    "print(f\"jumps {jumps}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 8; s = \"mnonopoo\"; validate_special_substrings = 12\n",
+    "n = 5; s = \"asasd\"; validate_special_substrings =  7\n",
+    "\n",
+    "# Special substrings\n",
+    "# - same characters xx\n",
+    "# - palindromic xxYxx\n",
+    "def substrCount(n, s):\n",
+    "    total_count = len(s)\n",
+    "    #print(f\"{total_count} {s}\")\n",
+    "    \n",
+    "    # check consecutive_characters\n",
+    "    for i in range(len(s)-1):\n",
+    "        continuous_found = 0\n",
+    "        mirror_found = 0\n",
+    "        for j in range(i+1, len(s)):\n",
+    "            #print(f\"{i} {j}\")\n",
+    "            if s[i]==s[j]:\n",
+    "                total_count += 1\n",
+    "                continuous_found += 1\n",
+    "                #print(f\"{total_count} {s[i]} {s[j]}\")\n",
+    "            else:\n",
+    "                #print(f\"{i} {j} not continuous\")\n",
+    "                for k in range(j+1, min(len(s),j+continuous_found+2)):\n",
+    "                    #print(f\"i {i}, k {k}\")\n",
+    "                    if not s[i] == s[k]:\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        mirror_found += 1\n",
+    "                if mirror_found == continuous_found:\n",
+    "                    total_count += 1\n",
+    "                break\n",
+    "            \n",
+    "    return(total_count)\n",
+    "\n",
+    "substrCount(4, \"aaaa\")\n",
+    "# ISSUES!!\n",
+    "#  the logic is flawed because:\n",
+    "#- The inner loop for the mirror part is not correctly counting the palindromic condition.\n",
+    "# Moreover, the algorithm is O(n^2) in the worst case and might time out for large strings, but let's first fix correctness.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed\n",
+    "def substrCount(n, s):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "        \n",
+    "    # Count group of cases: continuous occurrences or single occurrence \n",
+    "    groups = []\n",
+    "    count = 1\n",
+    "    for i in range(1, n):\n",
+    "        if s[i] == s[i-1]:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            # Start new group count\n",
+    "            groups.append((s[i-1], count))\n",
+    "            count = 1\n",
+    "    groups.append((s[n-1], count))\n",
+    "    \n",
+    "    # Compute special substrings\n",
+    "    total_substrings = 0\n",
+    "    for char, cnt in groups:\n",
+    "        total_substrings += cnt * (cnt + 1) // 2\n",
+    "        \n",
+    "    for i in range(1, len(groups)-1):\n",
+    "        if groups[i][1] == 1:\n",
+    "            if groups[i-1][0] == groups[i+1][0]:\n",
+    "                total_substrings += min(groups[i-1][1], groups[i+1][1])\n",
+    "                \n",
+    "    return total_substrings\n"
+   ]
   },
   {
    "cell_type": "code",
